objects/pse__Expense_Approval_UI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ORG wide setting for Expense Approval UI.</description>
    <fields>
        <fullName>pse__Number_Of_Expenses_Shown_Per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of expenses to display per page on the Approve Multiple Expense Reports page.</description>
        <inlineHelpText>Number of expenses to display per page on the Approve Multiple Expense Reports page.</inlineHelpText>
        <label>Number Of Expenses Shown Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos;  field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos;  field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Assignment Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Billable_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Billable Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_First_Expense_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show First Expense Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Last_Expense_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Last Expense Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Milestone_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Milestone Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Number_of_Expense_Lines__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the count of related expense lines is displayed on the Approve Multiple Expense Reports page.</description>
        <inlineHelpText>When checked, the count of related expense lines is displayed on the Approve Multiple Expense Reports page.</inlineHelpText>
        <label>Show Number of Expense Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Project_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Project Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Resource_Name__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Resource Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Total_Billable_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>Deprecated:Show Total Billable Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Total_Non_Billable_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</description>
        <inlineHelpText>This custom setting has been replaced by the &apos;ExpenseReportApprovalColumns&apos; field set and may be removed in a future release.</inlineHelpText>
        <label>DeprecatedShow Total Non-Billable Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Tooltip_Fields__c</fullName>
        <description>Comma delimited list of API names of expense report fields to be shown when hovering over the tooltip icon.</description>
        <inlineHelpText>Comma delimited list of API names of expense report fields to be shown when hovering over the tooltip icon.</inlineHelpText>
        <label>Tooltip Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Expense Approval UI</label>
</CustomObject>